--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -21,5 +21,9 @@
             <language>Gherkin</language>
             <className>com.github.yakov255.betterbehatsupport.GoToFileIntention</className>
         </intentionAction>
+        <intentionAction>
+            <language>Gherkin</language>
+            <className>com.github.yakov255.betterbehatsupport.RenameFileIntention</className>
+        </intentionAction>
     </extensions>
 </idea-plugin>
