--- a/gradle.properties
+++ b/gradle.properties
@@ -4,22 +4,25 @@ pluginGroup = com.github.yakov255.betterbehatsupport
 pluginName = better-behat-support
 pluginRepositoryUrl = https://github.com/yakov255/better-behat-support
 # SemVer format -> https://semver.org
-pluginVersion = 1.2.0
+pluginVersion = 1.3.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 223
-#pluginUntilBuild = 251.*
+pluginSinceBuild = 243
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = PS
-platformVersion = 2024.2
+platformVersion = 2024.3.6
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
-# Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = gherkin
+# Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
+platformPlugins =
+# Example: platformBundledPlugins = com.intellij.java
+platformBundledPlugins = gherkin
+# Example: platformBundledModules = intellij.spellchecker
+platformBundledModules =
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 8.10
+gradleVersion = 9.0.0
 
 # Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
 kotlin.stdlib.default.dependency = false
