--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ platformVersion = 2024.3.6
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
-platformPlugins =
+platformPlugins = com.jetbrains.php:243.26053.27
 # Example: platformBundledPlugins = com.intellij.java
 platformBundledPlugins = gherkin
 # Example: platformBundledModules = intellij.spellchecker
